--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -31,7 +31,7 @@ body {
   p {
     font-size: 0.8125rem;
     line-height: 0.8125rem;
-    font-weight: $regular;
+    font-weight: $normal;
   }
 }
 .label,
@@ -69,7 +69,7 @@ body {
     p {
       font-size: 0.875rem;
       line-height: 1.375rem;
-      font-weight: $regular;
+      font-weight: $normal;
     }
   }
 
