Create MainVideo component, add it into app.js

--- a/src/components/VideosNav/VideosNav.scss
+++ b/src/components/VideosNav/VideosNav.scss
@@ -3,6 +3,10 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/typography" as *;
 
+* {
+  font-family: $font;
+}
+
 .logo {
   padding: 1rem;
 
