--- a/src/components/MainVideo/MainVideo.scss
+++ b/src/components/MainVideo/MainVideo.scss
@@ -7,6 +7,11 @@
   font-family: $font;
 }
 
-.logo__avatar {
-  @include avatarMobile;
+.video {
+  padding: 1rem 1.5rem;
+
+  &__title {
+    color: $primary-color;
+    padding-bottom: 1rem;
+  }
 }
