--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -9,19 +9,25 @@
   font-family: $font;
 }
 
-.logo__upload {
-  .btn {
+.button {
+  &__btn {
     border-style: none;
     background-color: $primary-color-btn;
     color: $primary-color-background;
     width: 100%;
+    height: 2.5rem;
     border-radius: 0.25rem;
-    padding: 0.875rem;
     text-decoration: none;
     text-transform: uppercase;
-  }
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  &:hover {
-    background-color: $secondary-color-btn-hover;
+    &:hover {
+      background-color: $secondary-color-btn-hover;
+      box-shadow: 0px 0.25rem 0.25rem rgb(0 0 0 / 20%);
+    }
   }
 }
