--- a/src/components/VideosList/VideosList.scss
+++ b/src/components/VideosList/VideosList.scss
@@ -10,10 +10,20 @@
 .videos {
   padding: 0 1rem;
 
+  &__label {
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 0.8125rem;
+    font-weight: $demi;
+    color: $primary-color-neutral;
+  }
+
   &__item {
     display: flex;
-    padding: 1rem 0;
-    align-items: flex-start;
+    padding: 0.5rem 0;
+    align-items: center;
     justify-content: flex-start;
     gap: 0.625rem;
   }
@@ -21,20 +31,31 @@
   &__image {
     width: 100%;
     height: 100%;
+    border-radius: 0.25rem;
     object-fit: cover;
+    transition: 0.5s ease-in-out;
+
+    &:hover {
+      opacity: 0.5;
+    }
   }
 
   &__info {
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+    cursor: pointer;
+    width: 80%;
   }
 
-  .bold {
-    font-weight: $bold;
+  &__title {
+    font-weight: $demi;
   }
 
-  .test {
-    width: 5rem;
-    height: 5rem;
-    overflow: hidden;
+  &__group {
+    width: 7rem;
+    height: 4rem;
+    cursor: pointer;
   }
 }
