--- a/src/components/MainVideo/MainVideo.scss
+++ b/src/components/MainVideo/MainVideo.scss
@@ -75,7 +75,12 @@
 }
 
 .player {
+  width: 375px;
+  height: 240px;
+
   &__video {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
