--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -9,25 +9,27 @@
   font-family: $font;
 }
 
-.button {
-  &__btn {
-    border-style: none;
-    background-color: $primary-color-btn;
-    color: $primary-color-background;
-    width: 100%;
-    height: 2.5rem;
-    border-radius: 0.25rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.button__btn {
+  border-style: none;
+  background-color: $primary-color-btn;
+  color: $primary-color-background;
+  width: 100%;
+  height: 2.5rem;
+  border-radius: 0.25rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    &:hover {
-      background-color: $secondary-color-btn-hover;
-      box-shadow: 0px 0.25rem 0.25rem rgb(0 0 0 / 20%);
-    }
+  &:hover {
+    background-color: $secondary-color-btn-hover;
+    box-shadow: 0px 0.25rem 0.25rem rgb(0 0 0 / 20%);
+  }
+
+  @include tablet {
+    width: 9.375rem;
   }
 }
