--- a/src/components/MainVideo/MainVideo.scss
+++ b/src/components/MainVideo/MainVideo.scss
@@ -75,12 +75,14 @@
 }
 
 .player {
-  width: 20rem;
-  height: 15rem;
+  @include tablet {
+    border-right: 30px solid $secondary-color;
+    border-left: 30px solid $secondary-color;
+  }
 
   &__video {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
   }
 }
