--- a/src/components/VideosList/VideosList.scss
+++ b/src/components/VideosList/VideosList.scss
@@ -9,6 +9,12 @@
 
 .videos {
   padding: 0 1rem;
+  padding-bottom: 1rem;
+
+  @include tablet {
+    padding: 0 1.5rem;
+    padding-bottom: 1.5rem;
+  }
 
   &__label {
     padding-top: 1.5rem;
@@ -18,6 +24,11 @@
     font-size: 0.8125rem;
     font-weight: $demi;
     color: $primary-color-neutral;
+
+    @include tablet {
+      padding-top: 2.25rem;
+      padding-bottom: 1.5rem;
+    }
   }
 
   &__item {
@@ -47,6 +58,10 @@
     gap: 0.25rem;
     cursor: pointer;
     width: 80%;
+
+    @include tablet {
+      width: 25%;
+    }
   }
 
   &__title {
