--- a/src/components/VideosNav/VideosNav.scss
+++ b/src/components/VideosNav/VideosNav.scss
@@ -14,6 +14,7 @@
     display: flex;
     align-items: center;
     gap: 1.875rem;
+    padding: 1rem 1.5rem;
   }
 
   &__image {
@@ -22,6 +23,7 @@
 
     @include tablet {
       width: 25%;
+      padding-bottom: 0;
     }
   }
 
@@ -41,6 +43,7 @@
 
     @include tablet {
       flex: 1;
+      padding-bottom: 0;
     }
   }
 
