--- a/src/components/MainVideo/MainVideo.scss
+++ b/src/components/MainVideo/MainVideo.scss
@@ -14,6 +14,13 @@
     padding: 0 1.5rem;
   }
 
+  @include desktop {
+    padding-left: 2rem;
+    padding-right: 0;
+    width: 80%;
+    margin: 0 auto;
+  }
+
   &__title {
     color: $primary-color;
     padding: 1.5rem 0;
@@ -116,18 +123,5 @@
     text-align: left;
     font-weight: $demi;
     padding-bottom: 1.5rem;
-  }
-}
-
-.player {
-  @include tablet {
-    border-right: 30px solid $secondary-color;
-    border-left: 30px solid $secondary-color;
-  }
-
-  &__video {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
   }
 }
