--- a/src/components/CommentsForm/CommentsForm.scss
+++ b/src/components/CommentsForm/CommentsForm.scss
@@ -58,17 +58,7 @@
   }
 
   &__message {
-    display: block;
-    font-family: "Avenir Next", Arial, sans-serif;
-    font-size: 0.8125rem;
-    color: $secondary-color;
-    background-color: $secondary-color-background;
-    border-radius: 0.25rem;
-    padding: 0.75rem;
-    border: 1px solid $secondary-color-neutral;
-    transition: background-color 0.5s ease-out;
-    width: 100%;
-
+    @include textarea;
     @include tablet {
       width: 70%;
       height: 2.5rem;
