Create alert in the upload button and redirect to the home page

--- a/src/components/MainVideo/MainVideo.scss
+++ b/src/components/MainVideo/MainVideo.scss
@@ -119,6 +119,10 @@
     }
   }
 
+  &__description-content {
+    text-align: left;
+  }
+
   &__comments {
     text-align: left;
     font-weight: $demi;
