--- a/src/components/UploadForm/UploadForm.scss
+++ b/src/components/UploadForm/UploadForm.scss
@@ -42,11 +42,19 @@
       align-items: center;
       justify-content: flex-start;
       gap: 1.5rem;
+      padding-top: 1.5rem;
+      padding-bottom: 1.5rem;
     }
   }
 
   &__group {
     padding-top: 2.8125rem;
+    width: 100%;
+
+    @include desktop {
+      width: 63%;
+      padding-top: 0;
+    }
   }
 
   &__label {
@@ -57,6 +65,10 @@
     padding-top: 1.5rem;
     font-size: 0.8125rem;
     font-weight: 600;
+
+    @include desktop {
+      padding-top: 0;
+    }
   }
 
   &__video {
@@ -73,6 +85,10 @@
     max-width: 100%;
     object-fit: cover;
     border-radius: 0.25rem;
+
+    @include desktop {
+      height: 86%;
+    }
   }
 
   &__video-title {
